--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
-  <style href="src/assets/main.css"></style>
+  <link href="/src/style.css" rel="stylesheet">
 </head>
 
 <body style="padding: 0; margin: 0; box-sizing: border-box;">
